fix background image sizing on mobile

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -163,12 +163,9 @@ body p {
 }
 
 
-
-
 /* Media Queries */
-//
-//
-//
+
+// Mobile 
 @media (min-width:300px) {
   .main h1 {
     letter-spacing: 4px;
@@ -178,8 +175,21 @@ body p {
   #image {
     margin-top: 2vh;
   }
+
+  .landing {
+  height: 100vh;
+  width: 100vw;
+  background: url('images/paul_mobile.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  z-index:-100;
+}
 }
 
+
+// iPad
 @media (min-width:768px) {
   .navbar-nav{
         float:none;
@@ -207,6 +217,8 @@ body p {
     padding-right: 25px;
   }
 
+
+// Desktop
 @media (min-width:992px) { 
   .main h1 {
   letter-spacing: 7px;
